Revert "fix: clean up code"
This reverts commit afa2a83f